# Block-Propagation-

./: .gitignore  README.md  pyproject.toml  requirements.txt  simulation.py
.github/workflows/: ci.yml
dashboard/: app.py
dashboard-web/: README.md  package-lock.json  package.json  sim_server.py
dashboard-web/public/data/: all_tests_summary.csv
dashboard-web/scripts/: sync_data.js
dashboard-web/src/: App.css  App.jsx  index.css
docs/: PROJECT.md
experiments/: animate_propagation.py  plot_results.py  run_all.py  run_base.py  run_series.py
real_world/: README.md  parse_logs.py
src/: __init__.py  config.py  enums.py  metrics.py  network.py  protocols.py  results.py  simulator.py  types.py
tests/: __init__.py  test_config.py  test_metrics.py  test_network.py  test_protocols.py
